--- a/src/admin_add_voter.html
+++ b/src/admin_add_voter.html
@@ -5,75 +5,102 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Admin Home</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
         <style>
-            * {
-                box-sizing: border-box;
-            }
-
-            header {
-                background-color: #666;
-                padding: 30px;
-                text-align: center;
-                font-size: 35px;
-                color: white;
-            }
-
-            section::after {
-                content: "";
-                display: table;
-                clear: both;
-            }
-
-            ol {
-                float: left;
-                width: 50%;
-                height: 300px;
-                /* only for demonstration, should be removed */
-                background: #ccc;
-                padding: 20px;
-            }
-
-            form {
-                float: left;
-                padding: 20px;
-                width: 50%;
-                background-color: #f1f1f1;
-                height: 300px;
-                /* only for demonstration, should be removed */
+            .navbar-custom {
+                background-color: black;
             }
 
         </style>
     </head>
 
-    <body>
-        <header>
+    <body class="bg-dark container-fluid m-0">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="http://localhost:3000/admin_home.html">Online Election Portal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="http://localhost:3000/admin_home.html">Home</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Campaigning Portal</a>
+                        </li>
+                        <li class="nav-item">
+                            <button onClick="App.admin_view_results_event(); return false"
+                                style="background-color: black; color: white; border-color: black;"
+                                class="admin_view_results_event nav-link active" type="submit">View Live
+                                Results</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="submit" class="admin_check_reports_page_event nav-link active"
+                                style="background-color: black; color: white; border-color: black;"
+                                onClick="App.admin_check_reports_page_event(); return false">Check
+                                Reports</button>
+                        </li>
+                        <li class="nav-item">
+                            <button onClick="App.admin_add_voter_page_event(); return false"
+                                class="admin_add_voter_event nav-link active"
+                                style="background-color: black; color: white; border-color: black;" type="submit">Add
+                                Voters</button>
+                        </li>
+                        <li class="nav-item">
+                            <button onClick="App.admin_add_candidate_page_event(); return false"
+                                style="background-color: black; color: white; border-color: black;"
+                                class="admin_add_candidate_page_event nav-link active" type="submit">Add
+                                Candidates</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <header style="color: white; text-align: center;">
             <h1>Voters List</h1>
         </header>
-        <!-- <div id="loader">
-            <p id="text-center">Loading...</p>
-        </div> -->
-        <div>
-            <section id="content">
-                <div>
-                    <ol name="already_registered_voters" id="already_registered_voters">
+        <section id="content">
+            <div class="row">
+                <div class="col text-center row mt-5">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8 bg-light">
+                        <h3>Already Added Voters</h3>
+                        <ol name="already_registered_voters" id="already_registered_voters">
 
-                    </ol>
+                        </ol>
 
+                    </div>
+                    <div class="col-lg-2"></div>
                 </div>
-                <div>
-                    <form onSubmit="App.admin_add_voter(); return false" class="admin_add_voter">
-                        <label for="add_voter">Choose a Voter</label>
-                        <select name="add_voter" id="add_voter" required>
-                            <input type="submit" id="submit">
-                        </select>
-                    </form>
+                <div class="col text-center row mt-5">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8 bg-light">
+                        <h3>Eligible Voters</h3>
+                        <form onSubmit="App.admin_add_voter(); return false" class="admin_add_voter">
+                            <label for="add_voter">
+                                <h6>Choose a Voter</h6>
+                            </label>
+                            <select name="add_voter" id="add_voter">
+                            </select><br /> <br />
+                            <input type="submit" id="submit" class="btn btn-primary"><br /><br />
+                        </form>
+                    </div>
+                    <div class="col-lg-2"></div>
                 </div>
-            </section>
-        </div>
-
+            </div>
+        </section>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
