--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -5,13 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Admin Home</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
         <style>
             * {
                 box-sizing: border-box;
             }
 
             header {
-                background-color: #666;
+                background-color: #000;
                 padding: 30px;
                 text-align: center;
                 font-size: 35px;
@@ -22,15 +25,6 @@
                 content: "";
                 display: table;
                 clear: both;
-            }
-
-            button {
-                float: left;
-                width: 30%;
-                height: 300px;
-                /* only for demonstration, should be removed */
-                background: #ccc;
-                padding: 20px;
             }
 
             form {
@@ -45,36 +39,46 @@
         </style>
     </head>
 
-    <body>
-        <header>
-            <h1>Admin Dashboard</h1>
-        </header>
-        <div id="loader">
-            <p id="text-center">Loading...</p>
-        </div>
-        <div>
-            <section id="content">
-                <div>
-                    <button type="button" name="create_election" class="admin_create_election">
-                        <a href="/create_election.html">Create Election</a>
-                    </button>
+    <body class="bg-dark container-fluid m-0">
+        <div class="min-vh-100">
+            <header style="text-align: center;">
+                <h1>Admin Dashboard</h1>
+            </header>
+            <div class="row mt-5">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 text-center bg-light mt-5">
+                    <section id="content">
+                        <div class="row">
+                            <h1>Manage Elections</h1>
+                            <form onSubmit="App.manage_election_event(); return false;" class="admin_manage_elections"
+                                style="height: fit-content;">
+                                <label for="manage_elections">
+                                    <h6>Choose an Election</h6>
+                                </label>
+                                <select name="manage_elections" id="manage_elections">
+
+                                </select><br /><br />
+                                <input type="submit" id="submit" class="btn btn-primary">
+                            </form>
+                        </div>
+                        <div class="row"> <a name="create_election" href="./create_election.html"
+                                class="admin_create_election">
+                                Create New Election?</a>
+                        </div>
+                    </section>
 
                 </div>
-                <div>
-                    <form onSubmit="App.manage_election_event(); return false;" class="admin_manage_elections">
-                        <label for="manage_elections">Choose an Election</label>
-                        <select name="manage_elections" id="manage_elections" required>
+                <div class="col-lg-2"></div>
 
-                        </select>
-                        <input type="submit" id="submit">
-                    </form>
-                </div>
-            </section>
+            </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
