--- a/src/create_election.html
+++ b/src/create_election.html
@@ -2,48 +2,94 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Create Election</title>
+        <title></title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <style>
+            .navbar-custom {
+                background-color: black;
+            }
+
+        </style>
     </head>
 
-    <body>
-        <header>
-            <h1>Create Election</h1>
-        </header>
-        <div id="loader">
-            <p id="text-center">Loading...</p>
+    <body class="bg-dark container-fluid m-0">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="http://localhost:3000/voter_home.html">Online Election Portal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="http://localhost:3000/voter_home.html">Home</a>
+                        </li>
+                        <li class="nav-item" id="vote">
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Campaigning Portal</a>
+                        </li>
+                        <li class="nav-item" id="report">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 text-center row mt-5 bg-light mb-5">
+                <header>
+                    <h1>Create Election</h1>
+                </header>
+                <br /> <br /> <br />
+                <div class="container row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8" style="text-align: left;">
+                        <form id="create_election_form" onSubmit="App.create_election_event(); return false">
+                            <label for="E_name">
+                                <h6>Election Name:</h6>
+                            </label>
+                            <input type="text" id="E_name" name="E_name"><br><br>
+                            <label for="date_cand_register_end"><b>Date until which Candidates can register:</b>
+                            </label>
+                            <input type="date" id="date_cand_register_end" name="date_cand_register_end"><br><br>
+
+                            <label for="time_cand_register_end"><b>Time until which Candidates can register:</b>
+                            </label>
+                            <input type="time" id="time_cand_register_end" name="time_cand_register_end"><br><br>
+
+                            <label for="date_polling_starts"><b>Date when the polling will begin:</b> </label>
+                            <input type="date" id="date_polling_starts" name="date_polling_starts"><br><br>
+
+                            <label for="time_polling_starts"><b>Time when the polling will begin: </b></label>
+                            <input type="time" id="time_polling_starts" name="time_polling_starts"><br><br>
+
+
+                            <label for="date_polling_ends"><b>Date when the polling will end: </b></label>
+                            <input type="date" id="date_polling_ends" name="date_polling_ends"><br><br>
+
+                            <label for="time_polling_ends"><b>Time when the polling will end: </b></label>
+                            <input type="time" id="time_polling_ends" name="time_polling_ends"><br /><br />
+
+                            <input type="submit" name="submit" id="submit" class="btn btn-primary">
+                        </form>
+                        <br /><br />
+                    </div>
+                    <div class="col-lg-2"></div>
+
+                </div>
+            </div>
+            <div class="col-lg-2"></div>
         </div>
-        <div>
-            <form id="create_election_form" onSubmit="App.create_election_event(); return false">
-                <label for="E_name">Election Name: </label>
-                <input type="text" id="E_name" name="E_name" required><br><br>
-                <label for="date_cand_register_end">Date until which Candidates can register: </label>
-                <input type="date" id="date_cand_register_end" name="date_cand_register_end" required><br><br>
-
-                <label for="time_cand_register_end">Time until which Candidates can register: </label>
-                <input type="time" id="time_cand_register_end" name="time_cand_register_end" required><br><br>
-
-                <label for="date_polling_starts">Date when the polling will begin: </label>
-                <input type="date" id="date_polling_starts" name="date_polling_starts" required><br><br>
-
-                <label for="time_polling_starts">Time when the polling will begin: </label>
-                <input type="time" id="time_polling_starts" name="time_polling_starts" required><br><br>
-
-
-                <label for="date_polling_ends">Date when the polling will end: </label>
-                <input type="date" id="date_polling_ends" name="date_polling_ends" required><br><br>
-
-                <label for="time_polling_ends">Time when the polling will end: </label>
-                <input type="time" id="time_polling_ends" name="time_polling_ends" required><br><br>
-
-                <input type="submit" name="submit" id="submit">
-            </form>
-        </div>
-
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
