--- a/src/index.html
+++ b/src/index.html
@@ -6,40 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>E-Voting Portal</title>
+    <title>Election</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
-  <body>
-    <div id="loader" style="display: none;">
-        <p class="text-center">Loading...</p>
-    </div>
-    <div id="content">
-        <form onSubmit="App.login(); return false;  ">
-            <legend><h2>Enter User ID and password to Login</h2></legend>
-            <label for="u_id">User ID</label>
-            <input type="number" id="u_id" required /><br>
-            <label for="pwd">Password</label>
-            <input type="password" id="pwd" required /><br><br>
-            <button type="submit" className="btn btn-success btn-block btn-lg">Login</button>
-        </form>
-        <br><br><br>
-        <a href="./register.html">New User? Click to Register</a>
-    </div>
-    <div id="accountAddress"></div>
+  <body class="bg-dark container-fluid m-0">
+    <div class="row mt-5">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 text-center row mt-5 bg-light mb-5">
+        <div id="loader" style="display: none;">
+          <p class="text-center">Loading...</p>
+        </div>
+        <header class="mt-5">
+          <h1>Enter User ID and password to Login</h1>
+        </header>
+        <div id="content">
+          <div class="container row mt-5">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 text-center">
+              <form onSubmit="App.login(); return false;">
+                <label for="u_id">User ID</label>
+                <input type="number" id="u_id" /><br><br>
+                <label for="pwd">Password</label>
+                <input type="password" id="pwd" /><br><br>
+                <button type="submit" class="btn btn-primary btn-block">Login</button>
+              </form>
+              <br>
+              <a href="./register.html">New User? Click to Register</a>
+              <br /><br />
+            </div>
+            <div id="accountAddress"></div><br /><br />
+            <div class="col-lg-2"></div>
 
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
