--- a/src/register.html
+++ b/src/register.html
@@ -6,42 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Election Results</title>
+    <title>Election</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   </head>
 
-  <body>
-    <div id="loader" style="display: none;">
-        <p class="text-center">Loading...</p>
-    </div>
-    <div id="content">
-        <form onSubmit="App.register(); return false;">
-            <legend><h2>Enter Your Details to Register</h2></legend>
-            <label for="name">Name:</label>
-            <input type="text" id="name" required /><br>
-            <label for="mail">E-mail:</label>
-            <input type="email" id="mail" required /><br>
-            <label for="pwd">Password</label>
-            <input type="password" id="pwd" required /><br><br>
-            <label for="pwd">Confirm Password</label>
-            <input type="password" id="confirm_pwd" required /><br><br>
-            <button type="submit" className="btn btn-success btn-block btn-lg">Register</button>
-        </form>
-        <br><br><br>
-        <a href="./index.html">Already a User? Click to Login</a>
+  <body class="bg-dark container-fluid m-0">
+    <div class="row mt-5">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 text-center row mt-5 bg-light mb-5">
+        <div id="loader" style="display: none;">
+          <p class="text-center">Loading...</p>
+        </div>
+        <header class="mt-5">
+          <h1>Enter Your Details to Register</h1>
+        </header>
+        <div id="content">
+          <div class="container row mt-5">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 text-center">
+              <form onSubmit="App.register(); return false;">
+                <label for="name">UserName:</label>
+                <input type="text" id="name" /><br><br>
+                <label for="mail">E - mail ID : </label>
+                <input type="email" id="mail" /><br><br>
+                <label for="pwd">Password :</label>
+                <input type="password" id="pwd" /><br><br>
+                <button type="submit" class="btn btn-primary btn-block">Register</button>
+              </form>
+              <br>
+              <a href="./index.html">Already a User? Click to Login</a>
+              <br /><br />
+            </div>
+            <div class="col-lg-2"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
