--- a/src/result.html
+++ b/src/result.html
@@ -5,61 +5,70 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Results</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
         <style>
-            * {
-                box-sizing: border-box;
-            }
-
-            header {
-                background-color: #666;
-                padding: 30px;
-                text-align: center;
-                font-size: 35px;
-                color: white;
-            }
-
-            section::after {
-                content: "";
-                display: table;
-                clear: both;
-            }
-
-            ol {
-                
-                height: 300px;
-                /* only for demonstration, should be removed */
-                background: #ccc;
-                padding: 20px;
-            }
-            li {
-                text-align: center;
-                font-size: 20px;
+            .navbar-custom {
+                background-color: black;
             }
 
         </style>
     </head>
 
-    <body>
-        <header>
-            <h1>Results</h1>
-        </header>
-        <!-- <div id="loader">
-            <p id="text-center">Loading...</p>
-        </div> -->
-        <div>
-            <section id="content">
-                <div>
-                    <ol name="display_result_of_election" id="display_result_of_election">
-
-                    </ol>
-
+    <body class="bg-dark container-fluid m-0">
+        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="http://localhost:3000">Online Election Portal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="http://localhost:3000/voter_home.html">Home</a>
+                        </li>
+                        <li class="nav-item" id="vote">
+                        </li>
+                        <li class="nav-item" id="campaign">
+                            <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
+                        </li>
+                        <li class="nav-item" id="applyforcandidacy">
+                        </li>
+                        <li class="nav-item" id="report">
+                        </li>
+                    </ul>
                 </div>
-            </section>
+            </div>
+        </nav>
+        <div class="text-center row mt-5">
+            <div class="col-lg-3"></div>
+            <div class="card col-lg-6 mt-5">
+                <div class="card-body mt-2">
+                    <h3 class="card-title">Results</h3>
+                    <div>
+                        <section id="content">
+                            <div>
+                                <ol name="display_result_of_election" id="display_result_of_election">
+
+                                </ol>
+
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3"></div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/web3.min.js"></script>
         <script src="js/truffle-contract.js"></script>
