added logout function to user side

--- a/src/campaign.html
+++ b/src/campaign.html
@@ -27,6 +27,8 @@
                         </li>
                         <li class="nav-item" id="report">
                         </li>
+                        <li class="nav-item" id="logout" style="float: right; text-align: right;"><button onclick="App.logout(); return false;" style="background-color: black; color:gray; border-color: black;"
+                            class="admin_view_results_event nav-link active" type="submit">Logout</button></li>
                     </ul>
                 </div>
             </div>
