added logout function to admin side

--- a/src/admin_manage_election.html
+++ b/src/admin_manage_election.html
@@ -59,6 +59,10 @@
                                 class="admin_add_candidate_page_event nav-link active" type="submit">Add
                                 Candidates</button>
                         </li>
+                        <li class="nav-item">
+                            <button onclick="App.logout(); return false;" style="background-color:black; color:white; border-color: black;"
+                            class="admin_view_results_event nav-link active" type="submit">Logout</button>
+                        </li>
                     </ul>
                 </div>
             </div>
