--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -64,6 +64,10 @@
                         <div class="row"> <a name="create_election" href="./create_election.html"
                                 class="admin_create_election">
                                 Create New Election?</a>
+                        </div><br>
+                        <div style="text-align: center; margin: 5px; padding: 5px;">
+                            <center><button onclick="App.logout(); return false;" style="background-color:white; color:black; border-color: black;"
+                            class="admin_view_results_event nav-link active" type="submit">Logout</button></li></center>
                         </div>
                     </section>
 
