--- a/src/admin_view_campaign.html
+++ b/src/admin_view_campaign.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Admin Add Candidates</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <title>Campaign Portal</title>
 
         <style>
             .navbar-custom {
@@ -15,7 +15,6 @@
 
         </style>
     </head>
-
     <body class="bg-dark container-fluid m-0">
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container-fluid">
@@ -32,9 +31,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <button onClick="App.admin_view_campaign_event(); return false"
-                                style="background-color: black; color: white; border-color: black;"
-                                class="admin_view_results_event nav-link active" type="submit">Campaigning Portal</button>
+                            <a class="nav-link active" href="#">Campaigning Portal</a>
                         </li>
                         <li class="nav-item">
                             <button onClick="App.admin_view_results_event(); return false"
@@ -68,41 +65,32 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center;">
-            <h1>Candidates List</h1>
+        <header style="text-align: center;">
+            <h1>Campaigning Page</h1>
         </header>
-        <section id="content">
+        <br /> <br />
+        <div id="loader" style="display: none;">
+            <p class="text-center">Loading...</p>
+        </div>
+        <div id="content" style="color: white;">
+            <!-- <div class="container row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <!-- <form onSubmit="App.uploadCampaign(); return false; ">
+                        <legend><h2>POST New Campaign</h2></legend>
+                        <textarea id="description" rows="10" cols="50" required>Add your Campaigning Descripiton here</textarea>
+                        <button type="submit" className="btn btn-success btn-block btn-lg">POST</button>
+                    </form> -->
+                </div>  
+            </div> -->
+            <div id="display-campaign">
+                <ul id='campaign'>
+                    <li></li>
+                </ul>
 
-            <div class="row">
-                <div class="col text-center row mt-5">
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-8 bg-light">
-                        <h3>Already Added Candidates</h3>
-                        <ul name="already_registered_candidates" id="already_registered_candidates">
-
-                        </ul>
-
-                    </div>
-                    <div class="col-lg-2"></div>
-                </div>
-                <div class="col text-center row mt-5">
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-8 bg-light">
-                        <h3>Voters Interested For Candidacy</h3>
-                        <form onSubmit="App.admin_add_candidate()" class="admin_add_candidate_event">
-                            <label for="add_candidate">
-                                <h6>Choose a candidate</h6>
-                            </label>
-                            <select name="add_candidate" id="add_candidate">
-
-                            </select><br /><br />
-                            <input type="submit" class="btn btn-primary" name="submit" id="submit"><br /><br />
-                        </form>
-                    </div>
-                    <div class="col-lg-2"></div>
-                </div>
             </div>
-        </section>
+            <div class="col-lg-2"></div>
+        </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -115,5 +103,4 @@
         <script src="js/truffle-contract.js"></script>
         <script src="js/app.js"></script>
     </body>
-
 </html>
