--- a/src/voter_home.html
+++ b/src/voter_home.html
@@ -65,7 +65,7 @@
                                 <label for="address"><b>Account:</b></label>
                                 <span class="card-text" id="address"></span>
                             </div>
-                            <div style="text-align: center;">
+                            <div style="text-align: center; margin: 5px; padding: 5px;">
                                 <center><button onclick="App.logout(); return false;" style="background-color:white; color:black; border-color: black;"
                                 class="admin_view_results_event nav-link active" type="submit">Logout</button></li></center>
                             </div>
