connected campaign to admin side

--- a/src/admin_manage_election.html
+++ b/src/admin_manage_election.html
@@ -32,8 +32,9 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Campaigning
-                                Portal</a>
+                            <button onClick="App.admin_view_campaign_event(); return false"
+                            style="background-color: black; color: white; border-color: black;"
+                            class="admin_view_campaign_event nav-link active" type="submit">Campaigning Portal</button>
                         </li>
                         <li class="nav-item">
                             <button onClick="App.admin_view_results_event(); return false"
