UI and Bug fixes

--- a/src/admin_accept_reports.html
+++ b/src/admin_accept_reports.html
@@ -94,7 +94,7 @@
                             <label for="add_to_reported">
                                 <h6>Choose a Report</h6>
                             </label>
-                            <select name="add_to_reported" id="add_to_reported">
+                            <select name="add_to_reported" id="add_to_reported" required>
                             </select><br /><br />
                             <input type="submit" class="btn btn-primary" id="submit"><br /><br />
                         </form>
