--- a/src/admin_add_candidate.html
+++ b/src/admin_add_candidate.html
@@ -93,7 +93,7 @@
                             <label for="add_candidate">
                                 <h6>Choose a candidate</h6>
                             </label>
-                            <select name="add_candidate" id="add_candidate">
+                            <select name="add_candidate" id="add_candidate" required>
 
                             </select><br /><br />
                             <input type="submit" class="btn btn-primary" name="submit" id="submit"><br /><br />
