--- a/src/admin_add_voter.html
+++ b/src/admin_add_voter.html
@@ -92,7 +92,7 @@
                             <label for="add_voter">
                                 <h6>Choose a Voter</h6>
                             </label>
-                            <select name="add_voter" id="add_voter">
+                            <select name="add_voter" id="add_voter" required>
                             </select><br /> <br />
                             <input type="submit" id="submit" class="btn btn-primary"><br /><br />
                         </form>
