--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -55,7 +55,7 @@
                                 <label for="manage_elections">
                                     <h6>Choose an Election</h6>
                                 </label>
-                                <select name="manage_elections" id="manage_elections">
+                                <select name="manage_elections" id="manage_elections" required>
 
                                 </select><br /><br />
                                 <input type="submit" id="submit" class="btn btn-primary">
