--- a/src/campaign.html
+++ b/src/campaign.html
@@ -32,6 +32,8 @@
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
+                        <li class="nav-item" id="result">
+                        </li>
                         <li class="nav-item" id="report">
                         </li>
                         <li class="nav-item" id="logout" style="float: right; text-align: right;"><button onclick="App.logout(); return false;" style="background-color: black; color:gray; border-color: black;"
@@ -62,7 +64,7 @@
                 </div>
                 <hr />
                 <div class="mt-3" id="display-campaign">
-                    <ul id='campaign'>
+                    <ul style="list-style-type:none;" id='campaign'>
                         <li></li>
                     </ul>
 
