--- a/src/create_election.html
+++ b/src/create_election.html
@@ -55,24 +55,24 @@
                             <input type="text" id="E_name" name="E_name"><br><br>
                             <label for="date_cand_register_end"><b>Date until which Candidates can register:</b>
                             </label>
-                            <input type="date" id="date_cand_register_end" name="date_cand_register_end"><br><br>
+                            <input type="date" id="date_cand_register_end" name="date_cand_register_end" required><br><br>
 
                             <label for="time_cand_register_end"><b>Time until which Candidates can register:</b>
                             </label>
-                            <input type="time" id="time_cand_register_end" name="time_cand_register_end"><br><br>
+                            <input type="time" id="time_cand_register_end" name="time_cand_register_end" required><br><br>
 
                             <label for="date_polling_starts"><b>Date when the polling will begin:</b> </label>
-                            <input type="date" id="date_polling_starts" name="date_polling_starts"><br><br>
+                            <input type="date" id="date_polling_starts" name="date_polling_starts" required><br><br>
 
                             <label for="time_polling_starts"><b>Time when the polling will begin: </b></label>
-                            <input type="time" id="time_polling_starts" name="time_polling_starts"><br><br>
+                            <input type="time" id="time_polling_starts" name="time_polling_starts" required><br><br>
 
 
                             <label for="date_polling_ends"><b>Date when the polling will end: </b></label>
-                            <input type="date" id="date_polling_ends" name="date_polling_ends"><br><br>
+                            <input type="date" id="date_polling_ends" name="date_polling_ends" required><br><br>
 
                             <label for="time_polling_ends"><b>Time when the polling will end: </b></label>
-                            <input type="time" id="time_polling_ends" name="time_polling_ends"><br /><br />
+                            <input type="time" id="time_polling_ends" name="time_polling_ends" required><br /><br />
 
                             <input type="submit" name="submit" id="submit" class="btn btn-primary">
                         </form>
