--- a/src/applyforcandidacy.html
+++ b/src/applyforcandidacy.html
@@ -34,6 +34,8 @@
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
+                        <li class="nav-item" id="result">
+                        </li>
                         <li class="nav-item" id="report">
                         </li>
                         <li class="nav-item" id="logout" style="float: right; text-align: right;"><button onclick="App.logout(); return false;" style="background-color: black; color:gray; border-color: black;"
