--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
             <div class="col-lg-8 text-center">
               <form onSubmit="App.login(); return false;">
                 <label for="u_id">User ID</label>
-                <input type="number" id="u_id" /><br><br>
+                <input type="number" id="u_id" required/><br><br>
                 <label for="pwd">Password</label>
-                <input type="password" id="pwd" /><br><br>
+                <input type="password" id="pwd" required/><br><br>
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
               </form>
               <br>
