--- a/src/register.html
+++ b/src/register.html
@@ -28,11 +28,13 @@
             <div class="col-lg-8 text-center">
               <form onSubmit="App.register(); return false;">
                 <label for="name">UserName:</label>
-                <input type="text" id="name" /><br><br>
+                <input type="text" id="name" required/><br><br>
                 <label for="mail">E - mail ID : </label>
-                <input type="email" id="mail" /><br><br>
+                <input type="email" id="mail" required/><br><br>
                 <label for="pwd">Password :</label>
-                <input type="password" id="pwd" /><br><br>
+                <input type="password" id="pwd" required/><br><br>
+                <label for="pwd">Confirm Password</label>
+                <input type="password" id="confirm_pwd" required /><br><br>
                 <button type="submit" class="btn btn-primary btn-block">Register</button>
               </form>
               <br>
