--- a/src/report.html
+++ b/src/report.html
@@ -32,6 +32,8 @@
                         <li class="nav-item" id="campaign">
                             <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
                         </li>
+                        <li class="nav-item" id="result">
+                        </li>
                         <li class="nav-item" id="report">
                         </li>
                         <li class="nav-item" id="logout" style="float: right; text-align: right;"><button onclick="App.logout(); return false;" style="background-color: black; color:gray; border-color: black;"
