--- a/src/result.html
+++ b/src/result.html
@@ -8,9 +8,16 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-        <style>
+        <<style>
             .navbar-custom {
                 background-color: black;
+            }
+            th, tr, td{
+                border: 1px solid black; 
+                border-collapse: collapse; 
+                text-align: center;
+                border-spacing: 5px;
+                padding: 10px;
             }
 
         </style>
@@ -45,25 +52,39 @@
                 </div>
             </div>
         </nav>
-        <div class="text-center row mt-5">
-            <div class="col-lg-3"></div>
-            <div class="card col-lg-6 mt-5">
-                <div class="card-body mt-2">
-                    <h3 class="card-title">Results</h3>
-                    <div>
-                        <section id="content">
-                            <div>
-                                <ol name="display_result_of_election" id="display_result_of_election">
+        <section id="content">
+            <div class="row mt-5">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 text-center row mt-5 bg-light mb-5 ">
+                    <div style="padding: 30px; margin-left: 250px">
+                        <!-- <ol name="display_result_of_election" id="display_result_of_election">
 
-                                </ol>
+                        </ol> -->
+                        <table name="display_result_of_election" style="border: 1px solid black; border-collapse: collapse; text-align: center;">
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            Candidate ID
+                                        </th>
+                                        <th>
+                                            Candidate Name
+                                        </th>
+                                        <th>
+                                            Vote Count
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="display_result_of_election">
 
-                            </div>
-                        </section>
+                                </tbody>
+                                    
+                                </table>
+
                     </div>
                 </div>
+                <div class="col-lg-3"></div>
             </div>
-            <div class="col-lg-3"></div>
-        </div>
+        </section>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
