AutoReload, Changes for blacklisted cands and report page

--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -44,6 +44,8 @@
             <header style="text-align: center;">
                 <h1>Admin Dashboard</h1>
             </header>
+            <br><br>
+                <h1 class="text-center" id="loader">Loading...</h1>
             <div class="row mt-5">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 text-center bg-light mt-5">
@@ -55,6 +57,7 @@
                                 <label for="manage_elections">
                                     <h6>Choose an Election</h6>
                                 </label>
+                                <!-- <p id="pill"></p> -->
                                 <select name="manage_elections" id="manage_elections" required>
 
                                 </select><br /><br />
