--- a/src/campaign.html
+++ b/src/campaign.html
@@ -25,10 +25,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item" id="home">
-                            <!-- <a class="nav-link active" aria-current="page" href="http://localhost:3000">Home</a> -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                                href="http://localhost:3000/voter_home.html">Home</a>
                         </li>
                         <li class="nav-item" id="vote">
+                        </li>
+                        <li class="nav-item" id="campaign">
+                            <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
