--- a/src/report.html
+++ b/src/report.html
@@ -32,6 +32,8 @@
                         <li class="nav-item" id="campaign">
                             <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
                         </li>
+                        <li class="nav-item" id="applyforcandidacy">
+                        </li>
                         <li class="nav-item" id="result">
                         </li>
                         <li class="nav-item" id="report">
