--- a/src/create_election.html
+++ b/src/create_election.html
@@ -25,12 +25,9 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
-                                href="http://localhost:3000/voter_home.html">Home</a>
+                                href="http://localhost:3000/admin_home.html">Home</a>
                         </li>
                         <li class="nav-item" id="vote">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Campaigning Portal</a>
                         </li>
                         <li class="nav-item" id="report">
                         </li>
