Added delete voter/cand for admin, made changes repectively

--- a/src/Voter.html
+++ b/src/Voter.html
@@ -16,7 +16,7 @@
     <body class="bg-dark container-fluid m-0">
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container-fluid">
-                <a class="navbar-brand" href="http://localhost:3000">Online Election Portal</a>
+                <a class="navbar-brand" href="http://localhost:3000/voter_home.html">Online Election Portal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                         <li class="nav-item" id="vote">
                         </li>
                         <li class="nav-item" id="campaign">
-                            <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
+                           <!-- <a class="nav-link" href="#">Campaigning Portal</a> -->
                         </li>
                         <li class="nav-item" id="applyforcandidacy">
                         </li>
@@ -44,6 +44,9 @@
                 </div>
             </div>
         </nav>
+        <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
+            <h1>Voter Election Page</h1>
+        </header>
         <div class="text-center row mt-5">
             <div class="col-lg-3"></div>
             <div class="card col-lg-6 mt-5">
