--- a/src/admin_view_results.html
+++ b/src/admin_view_results.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center;">
+        <header style="color: white; text-align: center; padding: 30px;">
             <h1>Live Results</h1>
         </header>
         <section id="content">
