--- a/src/campaign.html
+++ b/src/campaign.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </nav>
-        <header class="mt-3" style="text-align: center;color: white;">
+        <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
             <h1>Campaigning Page</h1>
         </header>
         <br /> <br />
@@ -68,7 +68,7 @@
                 </div>
                 <hr />
                 <div class="mt-3" id="display-campaign">
-                    <ul style="list-style-type:none;" id='campaign'>
+                    <ul style="list-style-type:none;" id='campaigning'>
                         <li></li>
                     </ul>
 
