--- a/src/create_election.html
+++ b/src/create_election.html
@@ -35,17 +35,17 @@
                 </div>
             </div>
         </nav>
+        <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
+            <h1>Create Election</h1>
+        </header>
         <div class="row">
             <div class="col-lg-2"></div>
-            <div class="col-lg-8 text-center row mt-5 bg-light mb-5">
-                <header>
-                    <h1>Create Election</h1>
-                </header>
-                <br /> <br /> <br />
+            <div class="col-lg-8 text-center row mt-5 bg-light mb-5">  
                 <div class="container row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8" style="text-align: left;">
-                        <form id="create_election_form" onSubmit="App.create_election_event(); return false">
+                        <form id="create_election_form" style="height: fit-content; padding: 30px;"
+                        onSubmit="App.create_election_event(); return false">
                             <label for="E_name">
                                 <h6>Election Name:</h6>
                             </label>
