--- a/src/voting.html
+++ b/src/voting.html
@@ -44,6 +44,9 @@
                 </div>
             </div>
         </nav>
+        <header class="mt-3" style="text-align: center;color: white; padding-top: 20px">
+            <h1>Voting</h1>
+        </header>
         <div class="row mt-5">
             <div class="col text-center row mt-5" id="content">
                 <div class="col-lg-1"></div>
@@ -69,9 +72,9 @@
             <div class="col row text-center mt-5">
                 <div class="col-lg-1"></div>
                 <div class="col-lg-10 bg-light">
-                    <h4 style="text-align: center;">
+                    <!-- <h4 style="text-align: center;">
                         Voting
-                    </h4>
+                    </h4> -->
                     <div id="loader">
                         <p class="text-center">Loading...</p>
                     </div>
@@ -79,7 +82,7 @@
                         <div class="container">
                             <form onSubmit="App.castVote(); return false;">
                                 <div class="form-group">
-                                    <label for="candidatesSelect">Select Candidate</label><br />
+                                    <label for="candidatesSelect" style="font-size: 20px;">Select Candidate</label><br />
                                     <br /><select class="form-control" id="candidatesSelect">
                                     </select>
                                 </div>
@@ -94,13 +97,13 @@
                         </div>
                     </div>
                     <div id="done">
-                        <p class="text-center">Your Vote Already Recorded</p>
+                        <p class="text-center">Your vote is already recorded</p>
                     </div>
                     <div id="timenotsuitable">
-                        <p class="text-center">Polls are Closed</p>
+                        <p class="text-center">Polls are closed</p>
                     </div>
                     <div id="blocked">
-                        <p class="text-center">You are Not allow to vote in this election</p>
+                        <p class="text-center">You are not allowed to vote in this election</p>
                     </div>
                 </div>
 
