--- a/src/admin_accept_reports.html
+++ b/src/admin_accept_reports.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center;">
+        <header style="color: white; text-align: center; padding: 30px;">
             <h1>Reports</h1>
         </header>
         <section id="content">
