--- a/src/admin_add_voter.html
+++ b/src/admin_add_voter.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center;">
+        <header style="color: white; text-align: center; padding: 30px;">
             <h1>Voters List</h1>
         </header>
         <section id="content">
@@ -94,6 +94,34 @@
                             </label>
                             <select name="add_voter" id="add_voter" required>
                             </select><br /> <br />
+                            <input type="submit" id="submit" class="btn btn-primary"><br /><br />
+                        </form>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center row mt-5">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8 bg-light">
+                        <h3>Deleted Voters</h3>
+                        <ol name="already_deleted_voters" id="already_deleted_voters">
+
+                        </ol>
+
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+                <div class="col text-center row mt-5">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8 bg-light">
+                        <h3>Delete Voters</h3>
+                        <form onSubmit="App.admin_delete_voter(); return false" class="admin_delete_voter">
+                            <label for="delete_voter">
+                                <h6>Choose a Voter</h6>
+                            </label>
+                            <select name="delete_voter" id="delete_voter" required>
+                            </select><br /><br />
                             <input type="submit" id="submit" class="btn btn-primary"><br /><br />
                         </form>
                     </div>
