--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -44,20 +44,17 @@
             <header style="text-align: center;">
                 <h1>Admin Dashboard</h1>
             </header>
-            <br><br>
-                <h1 class="text-center" id="loader">Loading...</h1>
             <div class="row mt-5">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 text-center bg-light mt-5">
                     <section id="content">
                         <div class="row">
-                            <h1>Manage Elections</h1>
+                            <h1 style="padding: 30px;">Manage Elections</h1>
                             <form onSubmit="App.manage_election_event(); return false;" class="admin_manage_elections"
                                 style="height: fit-content;">
                                 <label for="manage_elections">
                                     <h6>Choose an Election</h6>
                                 </label>
-                                <!-- <p id="pill"></p> -->
                                 <select name="manage_elections" id="manage_elections" required>
 
                                 </select><br /><br />
@@ -65,10 +62,10 @@
                             </form>
                         </div>
                         <div class="row"> <a name="create_election" href="./create_election.html"
-                                class="admin_create_election">
+                                class="admin_create_election" style="padding: 20px; font-size: 20px;">
                                 Create New Election?</a>
                         </div><br>
-                        <div style="text-align: center; margin: 5px; padding: 5px;">
+                        <div style="text-align: center; margin: 5px; padding-bottom: 15px;">
                             <center><button onclick="App.logout(); return false;" style="background-color:white; color:black; border-color: black;"
                             class="admin_view_results_event nav-link active" type="submit">Logout</button></li></center>
                         </div>
