--- a/src/admin_manage_election.html
+++ b/src/admin_manage_election.html
@@ -68,13 +68,16 @@
                 </div>
             </div>
         </nav>
+        <header style="color: white; text-align: center; padding: 30px;">
+            <h1>Manage Election</h1>
+        </header>
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8 text-center row mt-5 bg-light mb-5 ">
-                <header class="mt-5">
+                <!-- <header class="mt-5">
                     <h1>Edit Election</h1>
-                </header>
-                <form id="edit_election_form" style="height: fit-content;"
+                </header> -->
+                <form id="edit_election_form" style="height: fit-content; padding: 30px;"
                     onSubmit="App.edit_election_event(); return false">
                     <label for="E_name">Election Name: </label>
                     <input type="text" id="E_name" name="E_name"><br><br>
