--- a/src/admin_view_campaign.html
+++ b/src/admin_view_campaign.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center;">
+        <header style="color: white; text-align: center; padding: 30px;">
             <h1>Campaigning Page</h1>
         </header>
         <br /> <br />
@@ -78,10 +78,11 @@
             <div class="row mt-5">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 text-center row mt-5 bg-light mb-5 ">
-                    <div>
-                        <ul id='campaign'>
+                    <div class="mt-3" id="display-campaign">
+                        <ul style="list-style-type:none;" id='campaign'>
                             <li></li>
                         </ul>
+    
                     </div>
                 </div>
             </div>
