--- a/src/applyforcandidacy.html
+++ b/src/applyforcandidacy.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8 text-center row mt-5 bg-light mb-5">
-                <header style="text-align: center;">
+                <header style="text-align: center; padding: 30px;">
                     <h1>Apply for candidacy</h1>
                 </header>
                 <br /> <br /> <br />
