--- a/src/candidate.html
+++ b/src/candidate.html
@@ -44,6 +44,9 @@
                 </div>
             </div>
         </nav>
+        <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
+            <h1>Candidate Election Page</h1>
+        </header>
         <div>
             <div>
                 <div class="text-center row mt-5">
