--- a/src/result.html
+++ b/src/result.html
@@ -54,6 +54,9 @@
                 </div>
             </div>
         </nav>
+        <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
+            <h1>Result</h1>
+        </header>
         <section id="content">
             <div class="row mt-5">
                 <div class="col-lg-3"></div>
